# grai-core

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  codecov.yml  docker-compose.uffizzi.yml  pyproject.toml
grai-cli/: README.md  aded7690-d7cf-446c-930c-29394d0b8cf0  program.prof  pydoc-markdown.yml  pyproject.toml  start.py  test.yaml  test_file.yaml
grai-cli/grai_cli/: __init__.py  __main__.py  __version__.py  config_default.yaml
grai-cli/grai_cli/api/: __init__.py  apply.py  callbacks.py  entrypoint.py  setup.py
grai-cli/grai_cli/server/: __init__.py  authenticate.py  utilities.py
grai-cli/grai_cli/server_api/: __init__.py  lineage.py
grai-cli/grai_cli/settings/: __init__.py  cache.py  config.py  templates.py
grai-cli/grai_cli/utilities/: __init__.py  headers.py  serializers.py  styling.py  telemetry.py  test.py  utilities.py  validators.py
grai-cli/tests/: conftest.py  test_apply.py  test_config.py  test_demo.py  test_grai_cli.py  test_v1.py
grai-cli/tests/api/: test_server.py
grai-cli/tests/config/: cache.bak  cache.db  config.yaml
grai-client/: Makefile  README.md  docker-compose.yml  pyproject.toml
grai-client/docs/: test.md
grai-client/docs/grai_client/: authentication.md  update.md
grai-client/docs/reference/: sidebar.json
grai-client/grai_client/: __init__.py  authentication.py  update.py
grai-client/grai_client/endpoints/: __init__.py  client.py  rest.py  utilities.py
grai-client/grai_client/schemas/: __init__.py  edge.py  node.py  schema.py  utilities.py
grai-client/grai_client/testing/: schema.py
grai-client/grai_client/utilities/: __init__.py  tests.py
grai-client/src/grai-client/: __init__.py  authentication.py
grai-client/src/grai_client/: __init__.py  authentication.py  errors.py  update.py
grai-client/tests/: conftest.py  test_endpoint_utils.py  test_import.py  test_project_config.py  test_query_implementations.py  test_schemas.py  test_update.py  test_v1.py
grai-graph/: .gitignore  README.md  pyproject.toml
grai-graph/src/grai_graph/: __init__.py  analysis.py  changes.py  client_monkeypatch.py  edges.py  graph.py  nodes.py  schemas.py  test_utils.py  utils.py  visualizations.py
grai-graph/tests/: conftest.py  test_grai_core.py  test_graph.py  test_monkeypatch.py  test_source_segment.py
grai-integrations/source-airflow/: docker-compose.yml  pyproject.toml
grai-integrations/source-airflow/init/: Dockerfile.init
grai-integrations/source-airflow/tests/: conftest.py  test_adapters.py  test_connector.py
grai-integrations/source-bigquery/: README.md  pyproject.toml
grai-integrations/source-bigquery/tests/: conftest.py  test_adapters.py  test_base.py  test_bigquery.py  test_models.py  test_snowflake.py
grai-integrations/source-cube/: .gitignore  .gitignore.swp  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
grai-integrations/source-cube/.cubestore/: cachestore-current  metastore-current
grai-integrations/source-cube/scripts/: make_test_token.py
grai-integrations/source-cube/tests/: conftest.py  test_adapters.py  test_api.py  test_base.py  test_config.py  test_connector.py  test_settings.py  test_update.py
grai-integrations/source-dbt/: .gitignore  README.md  mypy.ini  pydoc-markdown.yml  pyproject.toml  pytest.ini
grai-integrations/source-dbt-cloud/: Makefile  README.md  docker-compose.yml  pyproject.toml
grai-integrations/source-dbt-cloud/scripts/: sync_dbt.py
grai-integrations/source-dbt-cloud/tests/: test_base.py
grai-integrations/source-dbt/external_data/: manifest-1.json
grai-integrations/source-dbt/scripts/: sync_dbt.py  sync_postgres.py
grai-integrations/source-dbt/tests/: conftest.py  test_load.py  test_pydantic_unit_tests.py  test_update_server.py
grai-integrations/source-fivetran/: Makefile  README.md  pyproject.toml  test.yaml
grai-integrations/source-fivetran/data/: fix_encodings.py  swagger.json
grai-integrations/source-fivetran/tests/: conftest.py  test_adapters.py  test_analysis.py  test_config.py  test_connector.py  test_models.py  test_postgres.py  test_update.py
grai-integrations/source-flat-file/: README.md  pyproject.toml
grai-integrations/source-flat-file/tests/: conftest.py  test_adapters.py  test_base.py
grai-integrations/source-metabase/: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  loader.py  models.py  pydoc-markdown.yml  pyproject.toml
grai-integrations/source-metabase/examples/: question_from_db.json  question_from_table.json  single_db_response.json  single_table_response.json
grai-integrations/source-metabase/init/: init.sql  init_metabase.sh
grai-integrations/source-metabase/tests/: conftest.py  test_adapters.py  test_base.py  test_config.py  test_connector.py
grai-integrations/source-mssql/: README.md  docker-compose.yml  poetry.toml  pyproject.toml
grai-integrations/source-mssql/data/: 001.sql  init-db.sh
grai-integrations/source-mssql/tests/: conftest.py  test_adapters.py  test_analysis.py  test_models.py  test_mssql.py  test_mysql.py
grai-integrations/source-mysql/: README.md  docker-compose.yml  pyproject.toml
grai-integrations/source-mysql/.test/: pyvenv.cfg
grai-integrations/source-mysql/tests/: conftest.py  (+7 more)
grai-integrations/source-postgres/: README.md  docker-compose.yml  pyproject.toml
grai-integrations/source-redshift/: README.md  pyproject.toml
grai-integrations/source-snowflake/: README.md  pyproject.toml
grai-schemas/: .pre-commit-config.yaml  README.md  example.py  mypy.ini  pydoc-markdown.yaml  pyproject.toml
grai-schemas/scripts/: auto-docstring-pydantic.py  test.py
grai-schemas/tests/: conftest.py  test_base.py  test_distinguishes_metadata.py  test_generics.py  test_serializers.py  test_type_annotations.py  test_utilities.py  test_v1_schemas.py
grai-server/app/: .coveragerc  .dockerignore  Dockerfile  Makefile  README.md  ai_build_script.py  beat.sh  conftest.py  entrypoint.sh  env  env.bak  init.py  initialize_db.sh  locust.conf  locustfile.py  log.py  manage.py  pyproject.toml  pytest.ini  superuser_init.py  worker.sh
(+2388 files in other folders)
