[tool.poetry]
name = "grai-core"
version = "0.1.0"
description = ""
authors = ["Ian Eaves <ian.k.eaves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grai-client = "^0.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

