[tool.poetry]
name = "grai-core"
version = "0.1.0"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
