[tool.poetry]
name = "grai-cli"
version = "0.1.6"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]
readme = "README.md"
license = "Elastic-2.0"

[tool.poetry.scripts]
grai = "grai_cli.api.entrypoint:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {version = "^0.6.1"}
click-spinner = "^0.1.10"
tqdm = "^4.64.0"
tabulate = "^0.8.10"
confuse = "^1.7.0"
validators = "^0.20.0"
fqdn = "^1.5.1"
apipkg = "^3.0.1"
requests = "^2.28.1"
pydantic = "^1.9.1"
rich = "^12.5.1"
grai-client = "^0.1.5"
PyYAML = "^6.0"
multimethod = "^1.8"
posthog = "^2.1.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7"
black = "^22.6.0"
types-PyYAML = "^6.0.10"
types-requests = "^2.28.3"
mypy = "^0.971"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
