[tool.poetry]
name = "grai-cli"
version = "0.1.7"
description = ""
authors = ["Ian Eaves <ian.k.eaves@gmail.com>"]
license = "Elastic-2.0"
readme = "README.md"
packages = [{include = "grai_cli"}]

[tool.poetry.scripts]
grai = "grai_cli.api.entrypoint:app"

[tool.poetry.dependencies]
python = "^3.8"
multimethod = "^1.9"
typer = "^0.7.0"
confuse = "^2.0.0"
requests = "^2.28.1"
pydantic = "^1.10.2"
grai-client = "^0.1.15"
posthog = "^2.2.0"
rich = {version = "^12.6.0", optional = true}

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.2.0"
black = "^22.10.0"
types-requests = "^2.28.11.5"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
