[tool.poetry]
name = "grai-cli"
version = "0.1.13"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]
license = "Elastic-2.0"
readme = "README.md"
packages = [{include = "grai_cli"}]
homepage = "https://www.grai.io/"
repository = "https://github.com/grai-io/grai-core/tree/master/grai-cli"
documentation = "https://docs.grai.io/"

[tool.poetry.scripts]
grai = "grai_cli.api.entrypoint:app"

[tool.poetry.dependencies]
python = "^3.8"
multimethod = "^1.9"
typer = "^0.7.0"
confuse = "^2.0.0"
requests = "^2.28.1"
pydantic = "^1.10.2"
grai-client = "^0.2.12"
posthog = "^2.2.0"
rich = "^12.6.0"
grai-schemas = "^0.1.5"
pydantic-yaml = "^0.11.1"

[tool.isort]
profile = "black"
known_first_party = "grai_cli"

[tool.black]
line-length = 120

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.2.0"
black = "^22.10.0"
types-requests = "^2.28.11.5"
mypy = "^0.991"
pre-commit = "^2.21.0"
devtools = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."grai_cli/__init__.py"]
