[tool.poetry]
name = "grai-client"
version = "0.3.0"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]
license = "Elastic-2.0"
packages = [
    { include = "grai_client", from = "src" },
]
readme = "README.md"
homepage = "https://www.grai.io/"
repository = "https://github.com/grai-io/grai-core/tree/master/grai-client"
documentation = "https://docs.grai.io/"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
requests = "^2.28.1"
multimethod = "^1.9"
pyyaml = "^6.0"
grai-schemas = "^0.2.0"
httpx = {extras = ["http2"], version = "^0.24.0"}
brotli = "^1.0.9"
tqdm = "^4.65.0"
more-itertools = "^9.1.0"
furl = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.6.0"
pytest = "^7.2.0"
types-requests = "^2.28.11.5"
types-pyyaml = "^6.0.12.2"
pre-commit = "^2.20.0"
pdoc = "^13.1.1"
pytest-durations = "^1.2.0"

[tool.isort]
profile = "black"
known_first_party = "grai_client"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."src/grai_client/__init__.py"]

[[tool.mypy.overrides]]
module = "tqdm.autonotebook,furl"
ignore_missing_imports = true
