[tool.poetry]
name = "grai-graph"
version = "0.1.4"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.8.5"
pydantic = "^1.9.1"
grai-client = "^0.1.5"
matplotlib = {version = "^3.5.2", optional = true}
pydot = {version = "^1.4.2", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.extras]
vis = ["matplotlib", "pydot"]
