[tool.poetry]
name = "grai-graph"
version = "0.1.10"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]
license = "Elastic-2.0"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.8.5"
pydantic = "^1.9.1"
grai-client = "^0.2.0"
matplotlib = {version = "^3.5.2", optional = true}
pydot = {version = "^1.4.2", optional = true}
grai-schemas = "^0.1.5"
devtools = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
ipdb = "^0.13.11"


[tool.poetry.group.plots.dependencies]
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "grai_graph"

[tool.black]
line-length = 120

[tool.poetry.extras]
vis = ["matplotlib", "pydot"]
