[tool.poetry]
name = "grai_schemas"
version = "0.2.0-alpha6"
description = ""
authors = ["Ian Eaves <ian@grai.io>", "Edward Louth <edward@grai.io>"]
license = "Elastic-2.0"
packages = [{ include = "grai_schemas", from = "src" },]
readme = "README.md"
homepage = "https://www.grai.io/"
repository = "https://github.com/grai-io/grai-core/tree/master/grai-schemas"
documentation = "https://docs.grai.io/"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.4"
multimethod = "^1.9.1"
polyfactory = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
mypy = "^0.991"
pytest-durations = "^1.2.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."src/grai_schemas/__init__.py"]
