[tool.poetry]
name = "grai-source-airflow"
version = "0.0.1"

description = ""
authors = ["Ian Eaves <ian@grai.io>"]
readme = "README.md"
packages = [
    { include = "grai_source_airflow", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
requests = "^2.31.0"
grai-schemas = "^0.2.0"
grai-client = "^0.3.0"
multimethod = "^1.9.1"
retrying = "^1.3.4"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
faker = "^18.11.2"
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "grai_source_airflow"

[tool.black]
line-length = 120

[tool.poetry_bumpversion.file."src/grai_source_airflow/__init__.py"]
