[tool.poetry]
name = "source-metabase"
version = "0.1.0"
description = ""
authors = ["Elseagle <dowolebolu@gmail.com>"]
readme = "README.md"
packages = [{include = "source_metabase"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
requests = "^2.31.0"
black = "^23.3.0"
grai-schemas = "^0.1.15"
grai-client = "^0.2.19"
multimethod = "^1.9.1"
faker = "^18.11.2"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
retrying = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
