[tool.poetry]
name = "grai-source-metabase"
version = "0.2.6"

description = ""
authors = ["Elseagle <dowolebolu@gmail.com>", "Ian Eaves <ian@grai.io", "Edward Louth <edward@grai.io"]
readme = "README.md"
packages = [
    { include = "grai_source_metabase", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.9"
requests = "^2.31.0"
grai-schemas = "^0.2.7-alpha3"
multimethod = "^1.9.1"
retrying = "^1.3.4"
httpx = {version="^0.24.1", extras=["http2"]}

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
faker = "^18.11.2"
black = "^23.3.0"
pytest = "^7.4.0"
grai-client = "^0.3.2"
mypy = "^1.5.1"
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "grai_source_metabase"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
xfail_strict = true

[tool.poetry_bumpversion.file."src/grai_source_metabase/__init__.py"]
