[tool.poetry]
name = "grai_source_postgres"
version = "0.1.0"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]
license = "ELv2"
packages = [
    { include = "grai_source_postgres", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
pydantic = "^1.9.1"
grai-client = "^0.1.0"
PyYAML = "^6.0"
multimethod = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
types-PyYAML = "^6.0.11"
types-psycopg2 = "^2.9.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
