[tool.poetry]
name = "grai_source_postgres"
version = "0.1.2"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]
license = "ELv2"
packages = [
    { include = "grai_source_postgres", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
grai-client = "^0.1.3"
PyYAML = "^6.0"
multimethod = "^1.8"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
types-PyYAML = "^6.0.11"
types-psycopg2 = "^2.9.18"
pytest = "^7.2.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
