[tool.poetry]
name = "grai_source_redshift"
version = "0.1.1-alpha3"
description = ""
authors = ["Ian Eaves <ian@grai.io>"]
license = "Elastic-2.0"
packages = [
    { include = "grai_source_redshift", from = "src" },
]
readme = "README.md"
homepage = "https://www.grai.io/"
repository = "https://github.com/grai-io/grai-core/tree/master/grai-integrations/source-redshift"
documentation = "https://docs.grai.io/"

[tool.poetry.dependencies]
python = "^3.8"
grai-schemas = "^0.2.7-alpha1"
multimethod = "^1.8"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
redshift-connector = "^2.0.911"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
types-PyYAML = "^6.0.11"
types-psycopg2 = "^2.9.18"
pytest = "^7.2.0"
grai-client = "^0.3.0"

    [tool.isort]
profile = "black"
known_first_party = "grai_source_redshift"

    [tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."src/grai_source_redshift/__init__.py"]
