[tool.poetry]
name = "grai_source_snowflake"
version = "0.0.6"
description = ""
authors = ["Tony Lewis <tony@grai.io>", "Edward Louth <edward@grai.io>"]
license = "ELv2"
packages = [
    { include = "grai_source_snowflake", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
grai-client = "^0.1.3"
PyYAML = "^6.0"
multimethod = "^1.8"
snowflake-connector-python = "^2.8.3"
grai-schemas = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
types-PyYAML = "^6.0.11"
pytest = "^7.2.0"

[tool.isort]
profile = "black"
known_first_party = "grai_source_snowflake"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
