[tool.poetry]
name = "the_guide"
version = "0.1.36"
description = ""
authors = ["Ian Eaves <ian@grai.io>", "Edward Louth <edward@grai.io>"]
license = "Elastic-2.0"
readme = "README.md"
homepage = "https://www.grai.io/"
repository = "https://github.com/grai-io/grai-core/tree/master/grai-server"
documentation = "https://docs.grai.io/"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1"
gunicorn = "^20.0.4"
djangorestframework = "^3.12.4"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-phonenumber-field ={extras = ["phonenumberslite"], version = "^6.3.0"}
django-cors-headers = "^3.13.0"
social-auth-app-django = "^5.0.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.2.0"}
python-decouple = "^3.6"
psycopg2 = "^2.9.3"
django-extensions = "^3.2"
djangorestframework-api-key = "^2"
posthog = "^3.0.1"
sentry-sdk = "^1.9.10"
strawberry-graphql-django = "^0.16.0"
drf-spectacular = "^0.24.2"
django-health-check = "^3.17.0"
django_multitenant = "^3.0.0"
django-ses = "^3.3.0"
celery = "^5.2.7"
redis = "^4.4.0"
coverage = "^7.0.3"
django-celery-beat = "^2.4.0"
django-storages = "^1.13.2"
ghapi = "^1.0.3"
jwt = "^1.3.1"
grai-graph = "^0.2.4"
grai-schemas = "^0.2.0"
grai-source-bigquery = "^0.2.0"
grai-source-dbt = "^0.3.1"
grai-source-dbt-cloud =  "^0.1.0"
grai-source-fivetran = "^0.1.0"
grai-source-flat-file = "^0.1.0"
grai-source-metabase = "^0.2.0"
grai-source-mssql = "^0.1.0"
grai-source-mysql =  "^0.1.0"
grai-source-postgres = "^0.2.0"
grai-source-redshift =  "^0.1.0"
grai-source-snowflake = "^0.1.0"
algoliasearch-django = "^2.0.0"
django-email-log = "^1.3.0"
django-celery-email = "^3.0.0"
dbtc = "^0.4.2"
django-query-chunk = "^0.0.1"
django-tqdm = "^1.3.1"
snowflake-connector-python = "^3.1.0"
google-cloud-appengine-logging = "^1.3.0"
django-postgres-extra = "^2.0.8"
grandalf = "^0.8"
drf-nested-routers = "^0.93.4"
django-redis = "^5.3.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.7.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
django-stubs = "^1.12.0"
djangorestframework-stubs = "^1.7.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
django-test-migrations = "^1.3.0"
coverage = "^7.2.7"

[tool.isort]
profile = "black"
src_paths = ["*"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "the_guide.settings.dev"
asyncio_mode = "auto"

[tool.poetry_bumpversion.file."the_guide/__init__.py"]
